fix code space wraps

--- a/files/style.css
+++ b/files/style.css
@@ -191,7 +191,7 @@ pre {
     padding: 10px;
 
     word-wrap: break-word;
-    white-space: normal;
+    white-space: pre-wrap;
 
     background: rgba(96, 129, 156, 0.1);
     border-left: 5px solid #60819c;
